# twitter-auto-manager

./: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
.github/actions/setup-node/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: auto-tweet.yml  desktop-ci.yml  reply-monitor.yml  workers-ci.yml
apps/desktop/: index.html  package.json  postcss.config.cjs  tsconfig.json
apps/desktop/src/: App.css  App.jsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs  state.rs
apps/desktop/src-tauri/src/commands/: bots.rs  dashboard.rs  export.rs  logs.rs  mod.rs  replies.rs  schedules.rs  tests.rs  users.rs
apps/desktop/src-tauri/src/db/: cleanup.rs  connection.rs  migrations.rs  mod.rs
apps/desktop/src-tauri/src/db/queries/: bots.rs  logs.rs  mod.rs  replies.rs  schedules.rs  users.rs
apps/desktop/src-tauri/src/models/: bots.rs  logs.rs  mod.rs  replies.rs  settings.rs
apps/desktop/src-tauri/src/services/: exporter.rs  mod.rs  twitter.rs
apps/desktop/src-tauri/src/utils/: crypto.rs  mod.rs
apps/desktop/src/components/: BotManagement.css  BotManagement.jsx  ExecutionLogs.css  ExecutionLogs.jsx  MyPage.css  (+3 more)
apps/workers/twitter/: package.json  tsconfig.build.json  tsconfig.json
config/actions/: github-config.example.json  github-config.json  system-state.json  user-config.json
config/actions/scripts/: merge-config.js  split-config.js
config/app/: default.json  development.json  production.json
scripts/: codegen-types.ts  dev.sh  release.ps1
(+9 files in other folders)
