[package]
name         = "twitter-auto-manager"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.70"
description  = "Twitter account auto-management tool"
authors      = ["You"]
license      = ""
repository   = ""

# ---------- build ----------
[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

# ---------- runtime ----------
[dependencies]
tauri                 = { version = "2.2.0", features = ["devtools"] }
tauri-plugin-opener   = "2.2.0"
tauri-plugin-dialog   = "2.2.0"
tauri-plugin-fs       = "2.2.0"
serde                 = { version = "1.0", features = ["derive"] }
serde_json            = "1.0"
rusqlite              = { version = "0.29.0", features = ["bundled"] }
chrono                = "0.4.26"
thiserror             = "1.0.44"
directories           = "5.0.1"
anyhow                = "1.0.72"
reqwest               = { version = "0.11", features = ["json"] }
tokio                 = { version = "1.0", features = ["full"] }
base64                = "0.21"
hmac                  = "0.12"
sha1                  = "0.10"
rand                  = "0.8"

# ---------- features ----------
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
